refactor product_categories endpoint
