# api/swagger/swagger.yaml
@@ -431,20 +431,10 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/product'
-      filters:
-        type: object
-        description: "Object for filtering"
-        properties:
-          categories:
-            type: array
-            description: 'Direct Sub categories that will be use for filtering the items.'
-            items:
-              $ref: '#/definitions/category'
-          brands:
-            type: array
-            description: 'Brands thats connected to this category that will be use for filtering the items.'
-            items:
-              $ref: '#/definitions/brand'
+      totalCount:
+        type: integer
+        description: "Total number of item, required for pagination"
+        default: 1
     
   featured_categories:
     type: object
